`0.36 - Java 8 & maven reconstruction`
futrue plan:

0.4 - 1.appendEntries 2.commit in state machine

0.5 - front-end and back-end interfacing（all through leader node）

0.6 - easy data persistence

0.7 - deployment

optional:

0.8 - socket → netty

0.9 - ez txt → database