@@ -1,4 +1,4 @@
-package entity;
+package main.java.entity;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -19,14 +19,14 @@ public class RaftState {
         if (log.isEmpty()) {
             return 0;  // 返回0或其他适当的默认值
         }
-        return log.getLast().getIndex();
+        return log.get(log.size()-1).getIndex();
     }
 
     public int getLastLogTerm() {
         if (log.isEmpty()) {
             return 0;  // 返回0或其他适当的默认值
         }
-        return log.getLast().getTerm();
+        return  log.get(log.size()-1).getIndex();
     }
 
     // getters and setters
